@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = geoprvky
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = vybran\u00E9 geoprvky
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometrie
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Ulo\u017Eit data jako
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = N\u00E1stroj pro kreslen\u00ED ohrani\u010Duj\u00EDc\u00EDho polygonu
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = N\u00E1stroj pro kreslen\u00ED ohrani\u010Duj\u00EDc\u00EDho obd\u00E9ln\u00EDka
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = N\u00E1stroj pro smaz\u00E1n\u00ED lomov\u00E9ho bodu
