@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = Objekte
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Suche nach \u00DCbereinstimmungen
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = Geometrien
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Datensatz speichern als
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Erzeuge Polygon-Rahmen
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Erzeuge Rahmen
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Zwischenpunkt entfernen
