@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = features
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Matching Features
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometries
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Save Dataset As
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Draw Polygon Fence Tool
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Draw Rectangle Fence Tool
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Delete Vertex Tool
