@@ -4,6 +4,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features=elementos
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features=Elementos emparejados 
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries=geometr\u00EDas
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn=Guardar datos como
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.plugin.A-fence-must-be-drawn=Un Marco debe ser dibujato
 com.vividsolutions.jump.workbench.plugin.A-Task-Window-must-be-active=Una ventana de proyecto debe ser activa
 com.vividsolutions.jump.workbench.plugin.At-least-n-categories-must-be-selected=Al menos {0} categorias deben ser seleccionadas
