@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = kohteita
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = yhteensopivia kohteita
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometriat
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Tallenna aineisto nimell\u00E4
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Piirr\u00E4 monikulmioaitaus
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Piirr\u00E4 suorakulmainen aitaus
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Poista taitepiste
