@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = objets
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Objets appari\u00E9s
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = g\u00E9ometries
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Enregistrer les donn\u00E9es sous
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = Nom de fichier invalide
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Dessiner le cadre polygonal
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Dessiner le cadre rectangulaire
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Supprimer un sommet
