@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = elemek
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Egyez\u0151 elemek
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometri\u00E1k
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Adathalmaz ment\u00E9se mint
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Poligon keret rajzol\u00F3 eszk\u00F6z
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = T\u00E9glalap keret rajzol\u00F3 eszk\u00F6z
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = T\u00F6r\u00E9spont t\u00F6rl\u00E9s eszk\u00F6z
