@@ -4,6 +4,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features=elementi
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features=Trova  gli elementi corrispondenti
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries=geometrie
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn=Salva livello come
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.plugin.A-fence-must-be-drawn=Una Cornice deve essere disegnata
 com.vividsolutions.jump.workbench.plugin.A-Task-Window-must-be-active=Una finestra di progetto deve essere attiva
 com.vividsolutions.jump.workbench.plugin.At-least-n-categories-must-be-selected=Almenot {0} categorie devono essere selezionate
