@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = \u30D5\u30A3\u30FC\u30C1
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = \u30DE\u30C3\u30C1\u3059\u308B\u30D5\u30A3\u30FC\u30C1\u30E3
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = \u30B8\u30AA\u30E1\u30C8\u30EA
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = \u540D\u524D\u3092\u4ED8\u3051\u3066\u30C7\u30FC\u30BF\u30BB\u30C3\u30C8\u3092\u4FDD\u5B58
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = \u30DD\u30EA\u30B4\u30F3\u30D5\u30A7\u30F3\u30B9\u306E\u63CF\u753B
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = \u77E9\u5F62\u30D5\u30A7\u30F3\u30B9\u306E\u63CF\u753B
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = \u30D0\u30FC\u30C6\u30C3\u30AF\u30B9\u306E\u63CF\u753B
