@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = \u0d2b\u0d3f\u0d1a\u0d4d
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = \u0d2f\u0d4b\u0d1c\u0d3f\u0d15\u0d4d\u0d15\u0d41\u0d28\u0d4d\u0d28 \u0d2b\u0d3f\u0d1a\u0d4d\u0d1a\u0d30\u0d41\u0d15\u0d33\u0d4d\u200d 
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = \u0d15\u0d4d\u0d37\u0d47\u0d24\u0d4d\u0d30\u0d17\u0d23\u0d3f\u0d24\u0d19\u0d4d\u0d19\u0d33\u0d4d\u200d 
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = \u0d1f\u0d3e\u0d31\u0d4d\u0d31 \u0d38\u0d46\u0d31\u0d4d\u0d31\u0d4d \u0d07\u0d2a\u0d4d\u0d30\u0d15\u0d3e\u0d30\u0d02 \u0d38\u0d02\u0d2c\u0d30\u0d3f\u0d1a\u0d4d\u0d1a\u0d41\u0d35\u0d46\u0d15\u0d4d\u0d15\u0d41\u0d15
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = \u0d15\u0d4d\u0d37\u0d47\u0d24\u0d4d\u0d30\u0d17\u0d23\u0d3f\u0d24\u0d19\u0d4d\u0d19\u0d33\u0d4d\u200d \u0d2c\u0d39\u0d41\u0d2d\u0d41\u0d1c\u0d15\u0d4d\u0d37\u0d47\u0d24\u0d4d\u0d30 \u0d35\u0d47\u0d32\u0d3f\u0d15\u0d33\u0d4d\u200d \u0d35\u0d30\u0d2f\u0d4d\u0d15\u0d4d\u0d15\u0d3e\u0d28\u0d41\u0d33\u0d4d\u0d33 \u0d09\u0d2a\u0d15\u0d30\u0d23\u0d02
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = \u0d26\u0d40\u0d30\u0d4d\u200d\u0d18\u0d1a\u0d24\u0d41\u0d30\u0d24\u0d4d\u0d24\u0d3f\u0d28\u0d4d\u0d31\u0d46 \u0d35\u0d30\u0d2f\u0d4d\u0d15\u0d4d\u0d15\u0d3e\u0d28\u0d41\u0d33\u0d4d\u0d33 \u0d09\u0d2a\u0d15\u0d30\u0d23\u0d02
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = \u0d36\u0d40\u0d30\u0d4d\u200d\u0d37\u0d02 \u0d15\u0d33\u0d2f\u0d3e\u0d28\u0d41\u0d33\u0d4d\u0d33 \u0d09\u0d2a\u0d15\u0d30\u0d23\u0d02 
