@@ -5,6 +5,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = fei\u00E7\u00F5es
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Comparando fei\u00E7\u00F5es
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometrias
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Salvar conjunto de dados como
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Ferramenta de Desenhar Quadro Poligonal
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Ferramenta de Desenho do Quadro Retangular
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Ferramenta de Deletar Vertex
