@@ -4,7 +4,8 @@ last_change_reason = Charset option for Shape files
 com.vividsolutions.jump.qa.diff.DiffGeometry.features = fei\u00E7\u00F5es
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = Comparando fei\u00E7\u00F5es
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = geometrias
-com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Salvar os dados como 
+com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = Salvar os dados como
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = Desenhar quadro poligonal
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = Desenhar de quadro retangular
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = Apagar um v\u00E9rtice
