@@ -3,6 +3,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = \u5730\u7269
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = \u9009\u914D\u5730\u7269
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = \u51E0\u4F55
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = \u4FDD\u5B58\u6570\u636E\u96C6\u4E3A
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = \u591A\u8FB9\u5F62\u9009\u62E9\u5DE5\u5177
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = \u77E9\u5F62\u9009\u62E9\u5DE5\u5177
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = \u5220\u9664\u8282\u70B9\u5DE5\u5177
