@@ -3,6 +3,7 @@ com.vividsolutions.jump.qa.diff.DiffGeometry.features = \u5730\u7269
 com.vividsolutions.jump.qa.diff.DiffGeometry.Matching-features = \u9078\u914D\u5730\u7269
 com.vividsolutions.jump.qa.diff.DiffGeometryComponents.geometries = \u5E7E\u4F55
 com.vividsolutions.jump.workbench.datasource.SaveDatasetAsPlugIn = \u4FDD\u5B58\u6578\u64DA\u96C6\u70BA
+com.vividsolutions.jump.workbench.datasource.SaveFileDataSourceQueryChooser.Invalid-file-name = T\:Invalid File Name
 com.vividsolutions.jump.workbench.ui.cursortool.DrawPolygonFenceTool = \u591A\u908A\u5F62\u9078\u64C7\u5DE5\u5177
 com.vividsolutions.jump.workbench.ui.cursortool.DrawRectangleFenceTool = \u77E9\u5F62\u9078\u64C7\u5DE5\u5177
 com.vividsolutions.jump.workbench.ui.cursortool.editing.DeleteVertexTool = \u522A\u9664\u7BC0\u9EDE\u5DE5\u5177
